cabal-version:  >= 1.10

name:           readable
version:        0.3.1
synopsis:       Reading from Text and ByteString

description:
  Provides a Readable type class for reading data types from ByteString and
  Text.  Also includes efficient implementations for common data types.

license:        BSD3
license-file:   LICENSE
author:         Doug Beardsley
maintainer:     mightybyte@gmail.com
build-type:     Simple
homepage:       https://github.com/mightybyte/readable
category:       Text

tested-with:
  GHC == 9.8.1
  GHC == 9.6.4
  GHC == 9.4.8
  GHC == 9.2.8
  GHC == 9.0.2
  GHC == 8.10.7
  GHC == 8.8.4
  GHC == 8.6.5
  GHC == 8.4.4
  GHC == 8.2.2
  GHC == 8.0.2

extra-source-files:
  CHANGELOG.md
  README.md

Library
  hs-source-dirs: src

  exposed-modules:
    Data.Readable

  build-depends:
      base        >= 4    && < 5
    , bytestring  >= 0.9  && < 0.13
    , text        >= 0.11 && < 2.2

  default-language: Haskell2010
  ghc-options: -Wall -fwarn-tabs

source-repository head
  type:     git
  location: https://github.com/mightybyte/readable.git
